src/rules/pycodestyle/snapshots/ruff__pycodestyle__tests__E501_E501.py.snap
---
source: src/pycodestyle/mod.rs
expression: checks
---
- kind:
    LineTooLong:
      - 123
      - 88
  location:
    row: 5
    column: 88
  end_location:
    row: 5
    column: 123
  fix: ~
  parent: ~
- kind:
    LineTooLong:
      - 127
      - 88
  location:
    row: 25
    column: 88
  end_location:
    row: 25
    column: 127
  fix: ~
  parent: ~
- kind:
    LineTooLong:
      - 132
      - 88
  location:
    row: 40
    column: 88
  end_location:
    row: 40
    column: 132
  fix: ~
  parent: ~
- kind:
    LineTooLong:
      - 105
      - 88
  location:
    row: 43
    column: 88
  end_location:
    row: 43
    column: 105
  fix: ~
  parent: ~
- kind:
    LineTooLong:
      - 129
      - 88
  location:
    row: 61
    column: 88
  end_location:
    row: 61
    column: 129
  fix: ~
  parent: ~

