src/rules/pycodestyle/snapshots/ruff__pycodestyle__tests__E741_E741.py.snap
---
source: src/pycodestyle/mod.rs
expression: checks
---
- kind:
    AmbiguousVariableName: l
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 1
  fix: ~
  parent: ~
- kind:
    AmbiguousVariableName: I
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 1
  fix: ~
  parent: ~
- kind:
    AmbiguousVariableName: O
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 1
  fix: ~
  parent: ~
- kind:
    AmbiguousVariableName: l
  location:
    row: 6
    column: 0
  end_location:
    row: 6
    column: 1
  fix: ~
  parent: ~
- kind:
    AmbiguousVariableName: l
  location:
    row: 8
    column: 3
  end_location:
    row: 8
    column: 4
  fix: ~
  parent: ~
- kind:
    AmbiguousVariableName: l
  location:
    row: 9
    column: 4
  end_location:
    row: 9
    column: 5
  fix: ~
  parent: ~
- kind:
    AmbiguousVariableName: l
  location:
    row: 10
    column: 4
  end_location:
    row: 10
    column: 5
  fix: ~
  parent: ~
- kind:
    AmbiguousVariableName: l
  location:
    row: 11
    column: 4
  end_location:
    row: 11
    column: 5
  fix: ~
  parent: ~
- kind:
    AmbiguousVariableName: l
  location:
    row: 16
    column: 4
  end_location:
    row: 16
    column: 5
  fix: ~
  parent: ~
- kind:
    AmbiguousVariableName: l
  location:
    row: 20
    column: 7
  end_location:
    row: 20
    column: 8
  fix: ~
  parent: ~
- kind:
    AmbiguousVariableName: l
  location:
    row: 25
    column: 11
  end_location:
    row: 25
    column: 12
  fix: ~
  parent: ~
- kind:
    AmbiguousVariableName: l
  location:
    row: 26
    column: 4
  end_location:
    row: 26
    column: 5
  fix: ~
  parent: ~
- kind:
    AmbiguousVariableName: l
  location:
    row: 30
    column: 4
  end_location:
    row: 30
    column: 5
  fix: ~
  parent: ~
- kind:
    AmbiguousVariableName: l
  location:
    row: 33
    column: 17
  end_location:
    row: 33
    column: 18
  fix: ~
  parent: ~
- kind:
    AmbiguousVariableName: l
  location:
    row: 34
    column: 8
  end_location:
    row: 34
    column: 9
  fix: ~
  parent: ~
- kind:
    AmbiguousVariableName: l
  location:
    row: 40
    column: 7
  end_location:
    row: 40
    column: 8
  fix: ~
  parent: ~
- kind:
    AmbiguousVariableName: I
  location:
    row: 40
    column: 13
  end_location:
    row: 40
    column: 14
  fix: ~
  parent: ~
- kind:
    AmbiguousVariableName: l
  location:
    row: 44
    column: 7
  end_location:
    row: 44
    column: 8
  fix: ~
  parent: ~
- kind:
    AmbiguousVariableName: I
  location:
    row: 44
    column: 15
  end_location:
    row: 44
    column: 16
  fix: ~
  parent: ~
- kind:
    AmbiguousVariableName: l
  location:
    row: 48
    column: 8
  end_location:
    row: 48
    column: 9
  fix: ~
  parent: ~
- kind:
    AmbiguousVariableName: I
  location:
    row: 48
    column: 13
  end_location:
    row: 48
    column: 14
  fix: ~
  parent: ~
- kind:
    AmbiguousVariableName: l
  location:
    row: 57
    column: 15
  end_location:
    row: 57
    column: 16
  fix: ~
  parent: ~
- kind:
    AmbiguousVariableName: l
  location:
    row: 66
    column: 19
  end_location:
    row: 66
    column: 20
  fix: ~
  parent: ~
- kind:
    AmbiguousVariableName: l
  location:
    row: 71
    column: 21
  end_location:
    row: 71
    column: 22
  fix: ~
  parent: ~
- kind:
    AmbiguousVariableName: l
  location:
    row: 74
    column: 4
  end_location:
    row: 74
    column: 5
  fix: ~
  parent: ~

